package merail.life.domain

object TestTags {
    const val ERROR_DIALOG_CONTAINER = "ErrorDialogContainer"

    const val HOME_SCREEN_CONTAINER = "HomeScreenContainer"

    const val GLOBAL_LOADER = "GlobalLoader"
    const val TOP_LOADER = "TopLoader"

    const val HOME_TAB = "HomeTab"

    const val COMMON_LIST = "CommonList"
    const val PLACES_LIST = "PlacesList"
    const val COUNTRIES_LIST = "CountriesList"
    const val YEARS_LIST = "YearsList"

    const val SELECTOR_SCREEN_CONTAINER = "SelectorScreenContainer"

    const val CONTENT_SCREEN_CONTAINER = "ContentScreenContainer"

    const val COVER_IMAGE = "CoverImage"
}